Fix home on ie

--- a/app/assets/stylesheets/section/home.scss
+++ b/app/assets/stylesheets/section/home.scss
@@ -173,6 +173,11 @@ body {
 
 .ie {
   .content {
+    section.description {
+      h1 {
+        margin-bottom: 10px;
+      }
+    }
     section.like {
       margin-top: 0;
     }
